# json-rules-engine-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  schema.json
.github/workflows/: test.yml
src/: condition.rs  constraint.rs  core.rs  error.rs  lib.rs  rule.rs
src/event/: email_notification.rs  mod.rs  post_callback.rs
tests/: tests.rs
