[package]
authors     = [
  "Cheng JIANG <alex_cj96@foxmail.com>",
  "Benn Sundsrud <benn.sundsrud@gmail.com>",
]
description = "json rules engine"
edition     = "2018"
keywords    = ["json", "rule", "rules", "engine"]
license     = "MIT/Apache-2.0"
name        = "json-rules-engine"
repository  = "https://github.com/GopherJ/json-rules-engine-rs"
version     = "0.9.3"

[dependencies]
futures-util = { version = "0.3", optional = true }
mustache     = "0.9"
reqwest      = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
rhai         = { version = "0.20", features = [
  "sync",
  "f32_float",
  "no_function",
  "no_optimize",
  "no_module",
  "no_closure",
  "serde",
  "unchecked",
], optional = true }
sendgrid     = { version = "0.17", default-features = false, features = ["async", "rustls"], optional = true }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = { version = "1.0" }
thiserror    = "1.0"
async-trait  = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []

callback = ["reqwest"]
email = ["sendgrid", "futures-util"]
eval  = ["rhai"]
