[package]
authors     = [
  "Cheng JIANG <alex_cj96@foxmail.com>",
  "Benn Sundsrud <benn.sundsrud@gmail.com>",
]
description = "json rules engine"
edition     = "2018"
keywords    = ["json", "rule", "rules", "engine"]
license     = "MIT/Apache-2.0"
name        = "json-rules-engine"
repository  = "https://github.com/GopherJ/json-rules-engine-rs"
version     = "0.9.4"

[dependencies]
async-trait  = "0.1"
erased-serde = "0.4.1"
futures-util = { version = "0.3", optional = true }
jsonpath_lib = { version = "0.3.0", optional = true }
mustache     = "0.9"
reqwest      = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
rhai         = { version = "1.16.3", features = [
  "sync",
  "f32_float",
  "no_function",
  "no_optimize",
  "no_module",
  "no_closure",
  "serde",
  "unchecked",
], optional = true }
sendgrid     = { version = "0.19.2", default-features = false, features = ["async", "rustls"], optional = true }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = { version = "1.0" }
strum        = "0.25.0"
strum_macros = "0.25.3"
thiserror    = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []

callback = ["reqwest"]
email    = ["sendgrid", "futures-util"]

eval = ["rhai"]
path = ["jsonpath_lib"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
